test/resources/parser/failing/IfPrecedence.grading.amy
object IfPrecedence
  if (true) then 1 else 0 end if + 42
end IfPrecedence